re-fixed update to 'align to wireframes' update order

--- a/src/css/scss/_responsive/_responsive-navbar.scss
+++ b/src/css/scss/_responsive/_responsive-navbar.scss
@@ -913,10 +913,15 @@
   .nav-li-electronics,
   .nav-li-entertainment,
   .global-nav-indicator-bar,
-  .nav-li-universal{
+  .nav-li-universal,{
     display:none;
   }
 } // .navbar
+
+.navmenu-li-store,
+.navmenu-li-support{
+  display:none;
+}
 
 .navmenu-w,
 .navtray-w{
